Update build-pipeline.yml for Azure Pipelines

--- a/.azuredevops/build-pipeline.yml
+++ b/.azuredevops/build-pipeline.yml
@@ -106,7 +106,8 @@ stages:
 
   - stage: dev
     dependsOn: build
-    condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+    condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'), or(eq(variables['Build.SourceBranch'], 'refs/heads/master'), startsWith(variables['Build.SourceBranch'], 'refs/heads/release/')))
+
     jobs:
       - deployment: docker
         pool:
