--- a/ice-repo/definitions/insis/definitions/claim/definitions/fnol/definitions/agent/definition.yml
+++ b/ice-repo/definitions/insis/definitions/claim/definitions/fnol/definitions/agent/definition.yml
@@ -1,5 +1,5 @@
 definition:
   title: insis.claim.fnol.agent
   executable: true
-  showInsights: true
+  showInsights: false
   elementOnPageCheck: false
