--- a/ice-repo/definitions/insis/definitions/dashboard/definitions/policies/definitions/agent/definition.yml
+++ b/ice-repo/definitions/insis/definitions/dashboard/definitions/policies/definitions/agent/definition.yml
@@ -1,5 +1,5 @@
 definition:
   title: insis.dashboard.policies.agent
   executable: true
-  showInsights: true
+  showInsights: false
   elementOnPageCheck: false
