--- a/ice-repo/definitions/insis/definitions/products/definitions/policy-details/definitions/agent/definition.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/policy-details/definitions/agent/definition.yml
@@ -1,5 +1,5 @@
 definition:
   title: insis.policy-details.agent
   executable: true
-  showInsights: true
+  showInsights: false
   elementOnPageCheck: false
