--- a/ice-repo/definitions/insis/definitions/person/definitions/client/definition.yml
+++ b/ice-repo/definitions/insis/definitions/person/definitions/client/definition.yml
@@ -1,5 +1,5 @@
 definition:
   title: insis.person.client
   executable: false
-  showInsights: false
+  showInsights: true
   elementOnPageCheck: false
