--- a/ice-repo/definitions/insis/definitions/products/definitions/policy-details/definitions/customer/definition.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/policy-details/definitions/customer/definition.yml
@@ -1,5 +1,5 @@
 definition:
   title: insis.products.policy-details.customer
   executable: true
-  showInsights: false
+  showInsights: true
   elementOnPageCheck: false
