--- a/ice-repo/definitions/insis/definitions/claim/definitions/fnol/definition.yml
+++ b/ice-repo/definitions/insis/definitions/claim/definitions/fnol/definition.yml
@@ -1,5 +1,5 @@
 definition:
   title: insis.claim.fnol
   executable: false
-  showInsights: false
+  showInsights: true
   elementOnPageCheck: false
