--- a/ice-repo/definitions/insis/definitions/claim/definitions/fnol/definitions/customer/definition.yml
+++ b/ice-repo/definitions/insis/definitions/claim/definitions/fnol/definitions/customer/definition.yml
@@ -1,5 +1,5 @@
 definition:
   title: insis.claim.fnol.customer
   executable: true
-  showInsights: false
+  showInsights: true
   elementOnPageCheck: false
