--- a/ice-repo/definitions/insis/definitions/dashboard/definitions/clients/definitions/agent/definition.yml
+++ b/ice-repo/definitions/insis/definitions/dashboard/definitions/clients/definitions/agent/definition.yml
@@ -1,5 +1,5 @@
 definition:
   title: insis.dashboard.clients.agent
   executable: true
-  showInsights: false
+  showInsights: true
   elementOnPageCheck: false
