--- a/ice-repo/definitions/insis/definitions/dashboard/definitions/home/definitions/customer/definition.yml
+++ b/ice-repo/definitions/insis/definitions/dashboard/definitions/home/definitions/customer/definition.yml
@@ -1,5 +1,5 @@
 definition:
   title: insis.dashboard.home.customer
   executable: true
-  showInsights: false
+  showInsights: true
   elementOnPageCheck: false
