--- a/ice-repo/definitions/insis/definitions/person/definitions/client/definitions/agent/definition.yml
+++ b/ice-repo/definitions/insis/definitions/person/definitions/client/definitions/agent/definition.yml
@@ -1,5 +1,5 @@
 definition:
   title: insis.person.client.agent
   executable: true
-  showInsights: false
+  showInsights: true
   elementOnPageCheck: false
