--- a/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl910211/definitions/term-life/definition.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl910211/definitions/term-life/definition.yml
@@ -1,5 +1,5 @@
 definition:
   title: insis.products.life.risks.tl910211.term-life
   executable: false
-  showInsights: false
+  showInsights: true
   elementOnPageCheck: false
