--- a/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl910211/definitions/term-life/definitions/quote-buy/definitions/agent/definition.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/life/definitions/risks/definitions/tl910211/definitions/term-life/definitions/quote-buy/definitions/agent/definition.yml
@@ -1,5 +1,5 @@
 definition:
   title: insis.products.life.risks.tl910211.term-life.quote-buy.agent
   executable: true
-  showInsights: false
+  showInsights: true
   elementOnPageCheck: false
