--- a/ice-repo/definitions/insis/definitions/products/definitions/motor/definitions/920101-motor-comprehensive/definitions/quote-buy/definitions/agent/definition.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/motor/definitions/920101-motor-comprehensive/definitions/quote-buy/definitions/agent/definition.yml
@@ -1,5 +1,5 @@
 definition:
   title: insis.products.motor.920101-motor-comprehensive.quote-buy.agent
   executable: false
-  showInsights: false
+  showInsights: true
   elementOnPageCheck: false
