--- a/ice-repo/definitions/insis/definitions/products/definitions/policy-details/definition.yml
+++ b/ice-repo/definitions/insis/definitions/products/definitions/policy-details/definition.yml
@@ -1,5 +1,5 @@
 definition:
   title: insis.policy-details
   executable: true
-  showInsights: false
+  showInsights: true
   elementOnPageCheck: false
