--- a/ice-repo/definitions/test-adac-components/definition.yml
+++ b/ice-repo/definitions/test-adac-components/definition.yml
@@ -1,5 +1,5 @@
 definition:
   title: test-adac-components
   executable: true
-  showInsights: false
+  showInsights: true
   elementOnPageCheck: false
