--- a/.azuredevops/build-pipeline.yml
+++ b/.azuredevops/build-pipeline.yml
@@ -128,7 +128,7 @@ stages:
                     if [ "$(docker ps -aq -f name=$DOCKER_CONTAINER)" ]; then
                       docker container rm -f $DOCKER_CONTAINER
                     fi
-                    docker run -d --name $DOCKER_CONTAINER -p :3000 --restart always $DOCKER_IMAGE
+                    docker run -d --network bridge --network dct --name $DOCKER_CONTAINER -p :3000 --restart always $DOCKER_IMAGE
                   displayName: docker run
                   env:
                     DOCKER_IMAGE: '$(DOCKER_REPO):$(Build.DefinitionName)_$(Build.BuildNumber)'
@@ -157,7 +157,7 @@ stages:
                     if [ "$(docker ps -aq -f name=$DOCKER_CONTAINER)" ]; then
                       docker container rm -f $DOCKER_CONTAINER
                     fi
-                    docker run -d --name $DOCKER_CONTAINER -p :3000 --restart always $DOCKER_IMAGE
+                    docker run -d --network bridge --network dct --name $DOCKER_CONTAINER -p :3000 --restart always $DOCKER_IMAGE
                   displayName: docker run
                   env:
                     DOCKER_IMAGE: '$(DOCKER_REPO):$(Build.DefinitionName)_$(Build.BuildNumber)'
