--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "copy-visual-ice": "rimraf dist/apps/visual-ice && cpx \"node_modules/@impeo/visual-ice/**/*\" dist/apps/visual-ice",
     "postinstall": "npm run install-ice-packages && npm run create-ivy-entry-points",
     "create-ivy-entry-points": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
-    "install-ice-packages": "npm i file:ice-packages/dmn-eval-js.tgz file:ice-packages/documentation.tgz file:ice-packages/ice-core.tgz file:ice-packages/ice-server-rules.tgz file:ice-packages/exp-ice.tgz file:ice-packages/ng-ice.tgz file:ice-packages/visual-ice.tgz file:ice-packages/ice-insurance-rules.tgz file:ice-packages/ice-tea.tgz file:ice-packages/insis-server-rules.tgz --no-save --no-optional --no-audit",
+    "install-ice-packages": "npm i file:ice-packages/dmn-eval-js.tgz file:ice-packages/documentation.tgz file:ice-packages/ice-core.tgz file:ice-packages/ice-server-rules.tgz file:ice-packages/exp-ice.tgz file:ice-packages/ng-ice.tgz file:ice-packages/visual-ice.tgz file:ice-packages/ice-insurance-rules.tgz file:ice-packages/insis-server-rules.tgz --no-save --no-optional --no-audit",
     "prettier:check": "prettier --check apps/**/*.ts libs/**/*.ts",
     "prettier:write": "prettier --check apps/**/*.ts libs/**/*.ts --write",
     "start-from-build": "node --inspect=7777 dist/apps/express/main.js"
