--- a/ice-repo/lists/common.yes-no.yml
+++ b/ice-repo/lists/common.yes-no.yml
@@ -7,6 +7,9 @@ list:
     label_de:
       label: Label de
       type: text
+    label_nl:
+      label: Label nl
+      type: text
     insis:
       label: insis
       type: text
@@ -14,8 +17,10 @@ list:
     - value: true
       label_en: 'Yes'
       label_de: Ja
+      label_nl: Ja
       insis: '1'
     - value: false
       label_en: 'No'
       label_de: Nein
+      label_nl: Nee
       insis: '2'
