--- a/ice-repo/lists/insis.person.yes-no.yml
+++ b/ice-repo/lists/insis.person.yes-no.yml
@@ -7,6 +7,9 @@ list:
     label_de:
       label: Label de
       type: text
+    label_nl:
+      label: label nl
+      type: text
     insis:
       label: Insis
       type: text
@@ -14,8 +17,10 @@ list:
     - value: true
       label_en: 'Yes'
       label_de: Ja
+      label_nl: Ja
       insis: 'Y'
     - value: false
       label_en: 'No'
       label_de: Nein
+      label_nl: Nee
       insis: 'N'
