--- a/ice-repo/lists/insis.policy.contract.question.a2.yml
+++ b/ice-repo/lists/insis.policy.contract.question.a2.yml
@@ -1,16 +1,21 @@
 list:
   type: boolean
   additionals:
-    label:
-      label: Label
+    label_en:
+      label: Label_en
+      type: text
+    label_nl:
+      label: label_nl
       type: text
     insis:
       label: Insis
       type: text
   items:
     - value: true
-      label: 'YES'
+      label_en: 'YES'
+      label_nl: Ja
       insis: '1'
     - value: false
-      label: 'NO'
+      label_en: 'NO'
+      label_nl: Nee
       insis: '2'
