--- a/ice-repo/lists/insis.policy.contract.questions.2000.15.yml
+++ b/ice-repo/lists/insis.policy.contract.questions.2000.15.yml
@@ -1,11 +1,16 @@
 list:
   type: text
   additionals:
-    label:
-      label: Label
+    label_en:
+      label: Label_en
+      type: text
+        label_nl:
+      label: label_nl
       type: text
   items:
     - value: 2000.15.1
-      label: 'YES'
+      label_en: 'YES'
+      label_nl: 'JA'
     - value: 2000.15.2
-      label: 'NO'
+      label_en: 'NO'
+      label_nl: 'NEE'
