--- a/ice-repo/lists/insis.policy.insured.property-objects~entity.buildings-sub-type.yml
+++ b/ice-repo/lists/insis.policy.insured.property-objects~entity.buildings-sub-type.yml
@@ -7,16 +7,23 @@ list:
     label_de:
       label: label_de
       type: text
+    label_nl:
+      label: label_nl
+      type: text
   items:
     - value: '411'
       label_en: Apartment
       label_de: Apartment
+      label_nl: Appartement
     - value: '412'
       label_en: House
       label_de: House
+      label_nl: Huis
     - value: '413'
       label_en: Villa
       label_de: Villa
+      label_nl: Villa
     - value: '414'
       label_en: Auxiliary building
       label_de: Auxiliary building
+      label_nl: Hulpgebouw
