--- a/ice-repo/lists/insis.term.duration.yml
+++ b/ice-repo/lists/insis.term.duration.yml
@@ -7,16 +7,23 @@ list:
     label_de:
       label: Label DE
       type: text
+    label_nl:
+      label: Label NL
+      type: text
   items:
     - value: 1
       label_en: 1 month
       label_de: 1 month
+      label_nl: 1 maand
     - value: 3
       label_en: 3 months
       label_de: 3 months
+      label_nl: 3 maanden
     - value: 6
       label_en: 6 months
       label_de: 6 months
+      label_nl: 6 maanden
     - value: 12
       label_en: 1 year
       label_de: 1 year
+      label_nl: 1 jaar
