--- a/ice-repo/lists/insis.types-only-name-and-company.yml
+++ b/ice-repo/lists/insis.types-only-name-and-company.yml
@@ -3,9 +3,11 @@ list:
     - value: '1'
       label_en: Person
       label_de: Person
+      label_nl: Persoon
     - value: '2'
       label_en: Company
       label_de: Company
+      label_nl: Bedrijf
   type: integer
   additionals:
     label_en:
@@ -13,4 +15,7 @@ list:
       type: text
     label_de:
       label: label_de
+      type: text
+    label_nl:
+      label: label_nl
       type: text
