--- a/ice-repo/lists/policy.beneficiaries.yml
+++ b/ice-repo/lists/policy.beneficiaries.yml
@@ -7,11 +7,16 @@ list:
       label_de: >-
         Standard beneficiary in the following order: spouse or registered
         partner, children, parents, heirs of the insured person
-    - value: false
+      label_nl: >-
+      Standaard begunstigde in de volgende volgorde: echtgeno(o)t(e) 
+      of geregistreerde partner, kinderen, ouders, erfgenamen van de verzekerde
+          - value: false
       label_en: >-
         Specific people/companies
       label_de: >-
         Specific people/companies
+      label_nl: >-
+      Specifieke personen/bedrijven
   type: boolean
   additionals:
     label_en:
@@ -19,4 +24,7 @@ list:
       type: text
     label_de:
       label: label_de
+      type: text
+    label_nl:
+      label: label_nl
       type: text
