--- a/ice-repo/lists/policy.contract.payment.frequency-one-year.yml
+++ b/ice-repo/lists/policy.contract.payment.frequency-one-year.yml
@@ -1,14 +1,17 @@
 list:
   items:
     - value: 2
-      label_en: semiannually
+ label_en: semiannually
       label_de: semiannually
+      label_nl:
     - value: 4
       label_en: quarterly
       label_de: quarterly
+      label_nl: halfjaarlijks
     - value: 12
       label_en: monthly
       label_de: monthly
+      label_nl: maandelijks
   type: integer
   additionals:
     label_en:
@@ -16,4 +19,7 @@ list:
       type: string
     label_de:
       label: label_de
+      type: string
+    label_nl:
+      label: label_nl
       type: string
