--- a/ice-repo/lists/policy.new-policy-products.yml
+++ b/ice-repo/lists/policy.new-policy-products.yml
@@ -3,12 +3,15 @@ list:
     - value: '910211'
       label_en: 910211 - Term Life
       label_de: 910211 - Term Life
+      label_nl: 910211 - Termijn Leven
     - value: '920201'
       label_en: 920201 - Household Property
       label_de: 920201 - Household Property
+      label_nl: 920201 - Huishoudens
     - value: '920101'
       label_en: 920101 - Motor Comprehensive
       label_de: 920101 - Motor Comprehensive
+      label_nl: 920101 - Motor Uitgebreid
   type: text
   additionals:
     label_en:
@@ -16,4 +19,7 @@ list:
       type: string
     label_de:
       label: label_de
+      type: string
+    label_nl:
+      label: label_nl
       type: string
